test/func.ruse
// fail

fn p(a int a) int { // error
    a
}

fn f(a int) int {
    a
}

fn f() int { // error
}

fn main() int {
    f
    f() // error
    f(1, 1) // error
}
